--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -215,7 +215,7 @@
 }
 
 
-ul.simple-list {
+ul.collapse-list, ol.collapse-list {
     margin-bottom: 10px;
     
     li {
